# RigHumanGL

./: CMakeLists.txt  Makefile  README.md  main.cpp
model/: Robot.gltf
